force-app/main/default/objects/Institutions__c/Institutions__c.object-meta.xml
<CustomObject>
    <label>Institution</label>
    <nameField>
        <label>Institutions  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Institutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>