force-app/main/default/objects/Institutions__c/fields/Change_Code4__c.field-meta.xml
<CustomField>
    <fullName>Change_Code4__c</fullName>
    <description>FDIC code used to signify a structural event relating to an institution.</description>
    <label>Change Code4</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-History Record Initiation</fullName>
            </value>
            <value>
                <fullName>100-Entities Beginning Operation</fullName>
            </value>
            <value>
                <fullName>110-New Institution</fullName>
            </value>
            <value>
                <fullName>150-Cert Changed from Old Cert by Administrative Order</fullName>
            </value>
            <value>
                <fullName>200-Entities Ceasing Operation</fullName>
            </value>
            <value>
                <fullName>211-Absorption - Assisted</fullName>
            </value>
            <value>
                <fullName>212-Consolidated - Assisted</fullName>
            </value>
            <value>
                <fullName>213-Merger - Assisted</fullName>
            </value>
            <value>
                <fullName>215-Partial Purchase &amp; Assumption - Assisted</fullName>
            </value>
            <value>
                <fullName>216-Bridge Bank Merger</fullName>
            </value>
            <value>
                <fullName>217-Pass Through Receivership Merger</fullName>
            </value>
            <value>
                <fullName>221-Absorption - Without Assistance</fullName>
            </value>
            <value>
                <fullName>222-Consolidated - Without Assistance</fullName>
            </value>
            <value>
                <fullName>223-Merger - Without Assistance</fullName>
            </value>
            <value>
                <fullName>225-Partial Purchase &amp; Assumption - Without Assistance</fullName>
            </value>
            <value>
                <fullName>230-Financial Difficulty - Payoff</fullName>
            </value>
            <value>
                <fullName>231-Deposit Transfer (Modified Payoff)</fullName>
            </value>
            <value>
                <fullName>235-RTC Supervised Payoffs, Liquidations, and Closings</fullName>
            </value>
            <value>
                <fullName>240-Other Liquidations and Closings</fullName>
            </value>
            <value>
                <fullName>250-Cert Changed to New Cert by Administrative Order</fullName>
            </value>
            <value>
                <fullName>260-Bank Closed by Chartering Agent Pending Sale</fullName>
            </value>
            <value>
                <fullName>300-Change in Membership Status</fullName>
            </value>
            <value>
                <fullName>310-Institution Becomes a Member of FRS (Federal Reserve System)</fullName>
            </value>
            <value>
                <fullName>320-Institution Withdraws from FRS (Federal Reserve System)</fullName>
            </value>
            <value>
                <fullName>330-Institution Becomes a Member of FHS (should we define?)</fullName>
            </value>
            <value>
                <fullName>340-Institution Withdraws from FHS</fullName>
            </value>
            <value>
                <fullName>350-Institution Enters Conservatorship</fullName>
            </value>
            <value>
                <fullName>360-Conservatorship Institution Resolved</fullName>
            </value>
            <value>
                <fullName>405-Change/Correction to Established Date</fullName>
            </value>
            <value>
                <fullName>410-Change in Insurance Status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>