force-app/main/default/objects/Institutions__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City in which an institution&apos;s headquarters or one of its branches is physically located. Either the entire name or part of the name of a specific city may be entered to produce an Institution List.</description>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>