force-app/main/default/objects/Institutions__c/fields/Credit_Card_Institutions__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Institutions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Card Institutions</label>
    <type>Checkbox</type>
</CustomField>