force-app/main/default/objects/Institutions__c/fields/Denovo_Institution__c.field-meta.xml
<CustomField>
    <fullName>Denovo_Institution__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A flag used to indicate whether an institution is a new institution (not a recharter). This flag is set quarterly. For instance, if REPDTE is 3/31/98 and DENOVO equals 1, the institution was a denovo during the first quarter of 1998.</description>
    <label>Denovo Institution</label>
    <type>Checkbox</type>
</CustomField>