force-app/main/default/objects/Institutions__c/fields/Directly_Owned_By_Another_Bank_CERT__c.field-meta.xml
<CustomField>
    <fullName>Directly_Owned_By_Another_Bank_CERT__c</fullName>
    <label>Directly Owned By Another Bank (CERT)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>