force-app/main/default/objects/Institutions__c/fields/FDIC_Certificate__c.field-meta.xml
<CustomField>
    <fullName>FDIC_Certificate__c</fullName>
    <description>A unique NUMBER assigned by the FDIC used to identify institutions and for the issuance of insurance certificates.</description>
    <externalId>true</externalId>
    <inlineHelpText>A unique NUMBER assigned by the FDIC used to identify institutions and for the issuance of insurance certificates.</inlineHelpText>
    <label>FDIC Certificate #</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>