force-app/main/default/objects/Institutions__c/fields/Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Update__c</fullName>
    <description>The date of the last data update.</description>
    <label>Last Update</label>
    <type>Date</type>
</CustomField>