force-app/main/default/objects/Institutions__c/fields/NCUA_Certificate__c.field-meta.xml
<CustomField>
    <fullName>NCUA_Certificate__c</fullName>
    <externalId>true</externalId>
    <label>NCUA Certificate #</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>