force-app/main/default/objects/Institutions__c/fields/Net_Income_Quarterly__c.field-meta.xml
<CustomField>
    <fullName>Net_Income_Quarterly__c</fullName>
    <label>Net Income - Quarterly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>