force-app/main/default/objects/Institutions__c/fields/Primary_Internet_Web_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Internet_Web_Address__c</fullName>
    <label>Primary Internet Web Address</label>
    <length>225</length>
    <type>Text</type>
</CustomField>