force-app/main/default/objects/Institutions__c/fields/Total_Deposits_formula__c.field-meta.xml
<CustomField>
    <fullName>Total_Deposits_formula__c</fullName>
    <formula>Total_Deposits__c *1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Its a formula (Total Deposits *1000)</inlineHelpText>
    <label>Total Deposits F</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>