force-app/main/default/objects/Institutions__c/fields/Ultimate_Cert__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Cert__c</fullName>
    <label>Ultimate Cert</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>