force-app/main/default/objects/Institutions__c/recordTypes/FDIC.recordType-meta.xml
<RecordType>
    <fullName>FDIC</fullName>
    <active>true</active>
    <description>FDIC</description>
    <label>FDIC</label>
</RecordType>