force-app/main/default/objects/Institutions__c/recordTypes/NCUA.recordType-meta.xml
<RecordType>
    <fullName>NCUA</fullName>
    <active>true</active>
    <description>NCUA</description>
    <label>NCUA</label>
</RecordType>